conv benchmark wip

--- a/src/mlp.ipynb
+++ b/src/mlp.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Knet-Flux mlp benchmark based on https://github.com/FluxML/model-zoo/blob/master/vision/mnist/mlp.jl"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -42,22 +49,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m SpecialFunctions → `~/.julia/packages/SpecialFunctions/fvheQ/deps/build.log`\n",
-      "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m SpecialFunctions → `~/.julia/packages/SpecialFunctions/fvheQ/deps/build.log`\n",
-      "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m CodecZlib ───────→ `~/.julia/packages/CodecZlib/DAjXH/deps/build.log`\n",
-      "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m Knet ────────────→ `~/.julia/packages/Knet/3lzCR/deps/build.log`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Uncomment this to get Knet profiling info at the end:\n",
     "# ENV[\"KNET_TIMER\"] = ENV[\"AUTOGRAD_TIMER\"] = \"true\"\n",
-    "using Pkg; Pkg.build(\"AutoGrad\"); Pkg.build(\"Knet\")"
+    "# using Pkg; Pkg.build(\"AutoGrad\"); Pkg.build(\"Knet\")"
    ]
   },
   {
@@ -65,19 +61,6 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Recompiling stale cache file /home/gridsan/dyuret/.julia/compiled/v1.0/Flux/QdkVy.ji for Flux [587475ba-b771-5e3f-ad9e-33799f191a9c]\n",
-      "└ @ Base loading.jl:1187\n",
-      "┌ Info: Recompiling stale cache file /home/gridsan/dyuret/.julia/compiled/v1.0/CuArrays/7YFE0.ji for CuArrays [3a865a2d-5b23-5a0f-bc46-62713ec82fae]\n",
-      "└ @ Base loading.jl:1187\n",
-      "┌ Info: Recompiling stale cache file /home/gridsan/dyuret/.julia/compiled/v1.0/Knet/f4vSz.ji for Knet [1902f260-5fb4-5aff-8c31-6271790ab950]\n",
-      "└ @ Base loading.jl:1187\n",
-      "WARNING: Method definition gcnode(AutoGrad.Node) in module AutoGrad at /home/gridsan/dyuret/.julia/packages/AutoGrad/eAmjh/src/core.jl:38 overwritten in module Knet at /home/gridsan/dyuret/.julia/packages/Knet/3lzCR/src/gcnode.jl:18.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -146,54 +129,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "#5 (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Initialize Flux model\n",
-    "m0 = Chain(Dense(28^2, 32, relu),Dense(32, 10),softmax) |> gpu\n",
-    "loss(x, y) = crossentropy(m(x), y)\n",
-    "accuracy(x, y) = mean(onecold(m(x)) .== onecold(y))\n",
-    "evalcb = () -> @show(loss(X, Y))\n",
-    "# You can use this to start Knet with exact same model:\n",
-    "#c2k(a)=Param(KnetArray(Array(a)))\n",
-    "#km = kChain(kDense(c2k(m0.layers[1].W.data),c2k(m0.layers[1].b.data),Knet.relu), \n",
-    "#            kDense(c2k(m0.layers[2].W.data),c2k(m0.layers[2].b.data),identity))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(loss(X, Y), accuracy(X, Y)) = (2.4156141f0 (tracked), 0.11493333333333333)\n",
-      "loss(X, Y) = 2.3324726f0 (tracked)\n",
-      "  2.243610 seconds (524.24 k allocations: 19.855 MiB, 22.75% gc time)\n",
-      "(loss(X, Y), accuracy(X, Y)) = (0.28769067f0 (tracked), 0.9216333333333333)\n"
+      "(loss(X, Y), accuracy(X, Y)) = (2.3488135f0 (tracked), 0.11515)\n",
+      "  2.402374 seconds (513.62 k allocations: 20.364 MiB, 25.76% gc time)\n",
+      "(loss(X, Y), accuracy(X, Y)) = (0.27673373f0 (tracked), 0.9230833333333334)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.28769067f0 (tracked), 0.9216333333333333)"
+       "(0.27673373f0 (tracked), 0.9230833333333334)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,12 +155,14 @@
    "source": [
     "# Run this several times to get timing for Flux:\n",
     "# (loss(X, Y), accuracy(X, Y)) = (2.2691698f0 (tracked), 0.17285)\n",
-    "#  2.243610 seconds (524.24 k allocations: 19.855 MiB, 22.75% gc time)\n",
+    "#  2.402374 seconds (513.62 k allocations: 20.364 MiB, 25.76% gc time)\n",
     "# (loss(X, Y), accuracy(X, Y)) = (0.27879566f0 (tracked), 0.9224166666666667)\n",
-    "m = deepcopy(m0)\n",
+    "m = Chain(Dense(28^2, 32, relu),Dense(32, 10),softmax) |> gpu\n",
     "opt = ADAM(params(m))\n",
+    "loss(x, y) = crossentropy(m(x), y)\n",
+    "accuracy(x, y) = mean(onecold(m(x)) .== onecold(y))\n",
     "@show loss(X, Y), accuracy(X, Y)\n",
-    "@time Flux.train!(loss, dataset, opt, cb = throttle(evalcb, 10))\n",
+    "@time Flux.train!(loss, dataset, opt)\n",
     "@show loss(X, Y), accuracy(X, Y)"
    ]
   },
@@ -245,6 +201,30 @@
     "@show Knet.nll(km,kX,kY), Knet.accuracy(km,kX,kY)\n",
     "@time Knet.train!(km,kdata,callback=iters(200),optimizer=Knet.Adam())\n",
     "@show Knet.nll(km,kX,kY), Knet.accuracy(km,kX,kY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#5 (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can use this to start Knet with exact same model:\n",
+    "#m0 = deepcopy(m)\n",
+    "#c2k(a)=Param(KnetArray(Array(a)))\n",
+    "#km = kChain(kDense(c2k(m0.layers[1].W.data),c2k(m0.layers[1].b.data),Knet.relu), \n",
+    "#            kDense(c2k(m0.layers[2].W.data),c2k(m0.layers[2].b.data),identity))"
    ]
   },
   {
