cnn benchmark done

--- a/src/conv.ipynb
+++ b/src/conv.ipynb
@@ -44,18 +44,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m SpecialFunctions → `~/.julia/packages/SpecialFunctions/fvheQ/deps/build.log`\n",
-      "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m SpecialFunctions → `~/.julia/packages/SpecialFunctions/fvheQ/deps/build.log`\n",
-      "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m CodecZlib ───────→ `~/.julia/packages/CodecZlib/DAjXH/deps/build.log`\n",
-      "\u001b[32m\u001b[1m  Building\u001b[22m\u001b[39m Knet ────────────→ `~/.julia/packages/Knet/3lzCR/deps/build.log`\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Uncomment this to get Knet profiling info at the end:\n",
     "# ENV[\"KNET_TIMER\"] = ENV[\"AUTOGRAD_TIMER\"] = \"true\"\n",
@@ -67,19 +56,6 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "┌ Info: Recompiling stale cache file /home/gridsan/dyuret/.julia/compiled/v1.0/Flux/QdkVy.ji for Flux [587475ba-b771-5e3f-ad9e-33799f191a9c]\n",
-      "└ @ Base loading.jl:1187\n",
-      "┌ Info: Recompiling stale cache file /home/gridsan/dyuret/.julia/compiled/v1.0/CuArrays/7YFE0.ji for CuArrays [3a865a2d-5b23-5a0f-bc46-62713ec82fae]\n",
-      "└ @ Base loading.jl:1187\n",
-      "┌ Info: Recompiling stale cache file /home/gridsan/dyuret/.julia/compiled/v1.0/Knet/f4vSz.ji for Knet [1902f260-5fb4-5aff-8c31-6271790ab950]\n",
-      "└ @ Base loading.jl:1187\n",
-      "WARNING: Method definition gcnode(AutoGrad.Node) in module AutoGrad at /home/gridsan/dyuret/.julia/packages/AutoGrad/eAmjh/src/core.jl:38 overwritten in module Knet at /home/gridsan/dyuret/.julia/packages/Knet/3lzCR/src/gcnode.jl:18.\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -102,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,16 +87,16 @@
     "kChain(ls...)=kChain(ls)\n",
     "(c::kChain)(x) = (for l in c.layers; x = l(x); end; x)\n",
     "struct kDense; w; b; f; end\n",
-    "kDense(nx::Int,ny::Int,fn=identity)=kDense(param(ny,nx),param0(ny),fn)\n",
+    "kDense(nx::Int,ny::Int,fn=identity)=kDense(Knet.param(ny,nx),Knet.param0(ny),fn)\n",
     "(d::kDense)(x) = d.f.(d.w * Knet.mat(x) .+ d.b)\n",
     "struct kConv; w; b; f; end\n",
-    "kConv(w1,w2,cx,cy,fn=identity)=kConv(param(w1,w2,cx,cy), param0(1,1,cy,1), fn)\n",
+    "kConv(w1,w2,cx,cy,fn=identity)=kConv(Knet.param(w1,w2,cx,cy),Knet.param0(1,1,cy,1), fn)\n",
     "(f::kConv)(x) = pool(f.f.(conv4(f.w,x) .+ f.b))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +105,7 @@
        "(\"28×28×1×1000 CuArray{Float32,4}\", \"10×1000 Flux.OneHotMatrix{CuArray{Flux.OneHotVector,1}}\", \"28×28×1×1000 KnetArray{Float32,4}\", \"1000-element Array{Int64,1}\")"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,21 +125,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(loss(X, Y), accuracy(X, Y)) = (2.3025045f0 (tracked), 0.117)\n",
-      "  0.861841 seconds (236.63 k allocations: 14.045 MiB, 18.61% gc time)\n",
-      "(loss(X, Y), accuracy(X, Y)) = (1.4854774f0 (tracked), 0.673)\n"
+      "(loss(X, Y), accuracy(X, Y)) = (2.302674f0 (tracked), 0.109)\n",
+      "  9.770545 seconds (2.27 M allocations: 138.747 MiB, 26.75% gc time)\n",
+      "(loss(X, Y), accuracy(X, Y)) = (0.19522423f0 (tracked), 0.942)\n"
      ]
     }
    ],
    "source": [
     "# Run this several times to get timing for Flux:\n",
+    "# (loss(X, Y), accuracy(X, Y)) = (2.302674f0 (tracked), 0.109)\n",
+    "#   9.770545 seconds (2.27 M allocations: 138.747 MiB, 26.75% gc time)\n",
+    "# (loss(X, Y), accuracy(X, Y)) = (0.19522423f0 (tracked), 0.942)\n",
+    "\n",
     "m = Chain(\n",
     "  Conv((2,2), 1=>16, relu),\n",
     "  x -> maxpool(x, (2,2)),\n",
@@ -178,8 +158,40 @@
     "\n",
     "X,Y = train[1]\n",
     "@show loss(X, Y), accuracy(X, Y)\n",
-    "@time Flux.train!(loss, train, opt)\n",
+    "@time for i in 1:10; Flux.train!(loss, train, opt); end\n",
     "@show loss(X, Y), accuracy(X, Y);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Knet.nll(km, kX, kY), Knet.accuracy(km, kX, kY)) = (2.2925608f0, 0.145)\n",
+      "  2.766763 seconds (1.58 M allocations: 58.009 MiB, 12.79% gc time)\n",
+      "(Knet.nll(km, kX, kY), Knet.accuracy(km, kX, kY)) = (0.15760595f0, 0.951)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run this several times to get timing for Knet:\n",
+    "# (Knet.nll(km, kX, kY), Knet.accuracy(km, kX, kY)) = (2.2925608f0, 0.145)\n",
+    "#   2.766763 seconds (1.58 M allocations: 58.009 MiB, 12.79% gc time)\n",
+    "# (Knet.nll(km, kX, kY), Knet.accuracy(km, kX, kY)) = (0.15760595f0, 0.951)\n",
+    "\n",
+    "km = kChain(\n",
+    "    kConv(2,2,1,16,Knet.relu),\n",
+    "    kConv(2,2,16,8,Knet.relu),\n",
+    "    kDense(288,10))\n",
+    "kX,kY = ktrain[1]\n",
+    "iters(n)=(J->((n-=1)>=0))\n",
+    "@show Knet.nll(km,kX,kY), Knet.accuracy(km,kX,kY)\n",
+    "@time for i in 1:10; Knet.train!(km, ktrain; optimizer=Knet.Adam(), callback=iters(length(ktrain))); end\n",
+    "@show Knet.nll(km,kX,kY), Knet.accuracy(km,kX,kY);"
    ]
   },
   {
