added cpu tests

--- a/src/conv.ipynb
+++ b/src/conv.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Knet-Flux CNN benchmark based on [Flux/model-zoo](https://github.com/FluxML/model-zoo/blob/master/vision/mnist/conv.jl) conv.jl example"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -78,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,6 +99,13 @@
     "struct kConv; w; b; f; end\n",
     "kConv(w1,w2,cx,cy,fn=identity)=kConv(Knet.param(w1,w2,cx,cy),Knet.param0(1,1,cy,1), fn)\n",
     "(f::kConv)(x) = pool(f.f.(conv4(f.w,x) .+ f.b))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GPU tests"
    ]
   },
   {
@@ -191,6 +205,106 @@
     "iters(n)=(J->((n-=1)>=0))\n",
     "@show Knet.nll(km,kX,kY), Knet.accuracy(km,kX,kY)\n",
     "@time for i in 1:10; Knet.train!(km, ktrain; optimizer=Knet.Adam(), callback=iters(length(ktrain))); end\n",
+    "@show Knet.nll(km,kX,kY), Knet.accuracy(km,kX,kY);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CPU tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(\"28×28×1×1000 Array{Float64,4}\", \"10×1000 Flux.OneHotMatrix{Array{Flux.OneHotVector,1}}\", \"28×28×1×1000 Array{Float64,4}\", \"1000-element Array{Int64,1}\")"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load data\n",
+    "imgs = MNIST.images()\n",
+    "labels = onehotbatch(MNIST.labels(), 0:9)\n",
+    "train = [(cat(float.(imgs[i])..., dims = 4), labels[:,i])\n",
+    "         for i in partition(1:60_000, 1000)]\n",
+    "# train = gpu.(train)\n",
+    "klabels = MNIST.labels() .+ 1\n",
+    "ktrain = [(cat(float.(imgs[i])..., dims = 4), klabels[i])\n",
+    "          for i in partition(1:60_000, 1000)]\n",
+    "summary.((train[1]..., ktrain[1]...))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(loss(X, Y), accuracy(X, Y)) = (2.302547213644201 (tracked), 0.098)\n",
+      " 67.319825 seconds (180.23 M allocations: 55.193 GiB, 42.92% gc time)\n",
+      "(loss(X, Y), accuracy(X, Y)) = (1.7696594578438087 (tracked), 0.669)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run this several times to get timing for Flux:\n",
+    "\n",
+    "m = Chain(\n",
+    "  Conv((2,2), 1=>16, relu),\n",
+    "  x -> maxpool(x, (2,2)),\n",
+    "  Conv((2,2), 16=>8, relu),\n",
+    "  x -> maxpool(x, (2,2)),\n",
+    "  x -> reshape(x, :, size(x, 4)),\n",
+    "  Dense(288, 10), softmax)\n",
+    "m0 = deepcopy(m)\n",
+    "loss(x, y) = crossentropy(m(x), y)\n",
+    "accuracy(x, y) = mean(onecold(m(x)) .== onecold(y))\n",
+    "opt = ADAM(params(m))\n",
+    "\n",
+    "X,Y = train[1]\n",
+    "@show loss(X, Y), accuracy(X, Y)\n",
+    "@time Flux.train!(loss, train, opt)\n",
+    "@show loss(X, Y), accuracy(X, Y);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Knet.nll(km, kX, kY), Knet.accuracy(km, kX, kY)) = (2.3025472136442007, 0.098)\n",
+      "176.934181 seconds (100.80 k allocations: 31.919 GiB, 17.78% gc time)\n",
+      "(Knet.nll(km, kX, kY), Knet.accuracy(km, kX, kY)) = (1.7539083972962197, 0.63)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run this several times to get timing for Knet:\n",
+    "f2k(a)=Knet.Param(Array(a))\n",
+    "km = kChain(kConv(f2k(m0.layers[1].weight.data),f2k(reshape(m0.layers[1].bias.data,(1,1,16,1))),Knet.relu), \n",
+    "            kConv(f2k(m0.layers[3].weight.data),f2k(reshape(m0.layers[3].bias.data,(1,1,8,1))),Knet.relu),\n",
+    "            kDense(f2k(m0.layers[6].W.data),f2k(m0.layers[6].b.data),identity))\n",
+    "kX,kY = ktrain[1]\n",
+    "iters(n)=(J->((n-=1)>=0))\n",
+    "@show Knet.nll(km,kX,kY), Knet.accuracy(km,kX,kY)\n",
+    "@time Knet.train!(km, ktrain; optimizer=Knet.Adam(), callback=iters(length(ktrain)))\n",
     "@show Knet.nll(km,kX,kY), Knet.accuracy(km,kX,kY);"
    ]
   },
