--- a/src/mlp.ipynb
+++ b/src/mlp.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Knet-Flux mlp benchmark based on https://github.com/FluxML/model-zoo/blob/master/vision/mnist/mlp.jl"
+    "# Knet-Flux mlp benchmark based on [Flux/model-zoo](https://github.com/FluxML/model-zoo/blob/master/vision/mnist/mlp.jl) mlp example"
    ]
   },
   {
@@ -62,6 +62,15 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: Recompiling stale cache file /home/gridsan/dyuret/.julia/compiled/v1.0/Knet/f4vSz.ji for Knet [1902f260-5fb4-5aff-8c31-6271790ab950]\n",
+      "└ @ Base loading.jl:1187\n",
+      "WARNING: Method definition gcnode(AutoGrad.Node) in module AutoGrad at /home/gridsan/dyuret/.julia/packages/AutoGrad/eAmjh/src/core.jl:38 overwritten in module Knet at /home/gridsan/dyuret/.julia/packages/Knet/3lzCR/src/gcnode.jl:18.\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "0"
@@ -94,6 +103,13 @@
     "struct kDense; w; b; f; end\n",
     "kDense(nx::Int,ny::Int,fn=identity)=kDense(param(ny,nx),param0(ny),fn)\n",
     "(d::kDense)(x) = d.f.(d.w * x .+ d.b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GPU tests"
    ]
   },
   {
@@ -204,27 +220,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "#5 (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "# You can use this to start Knet with exact same model:\n",
-    "#m0 = deepcopy(m)\n",
-    "#c2k(a)=Param(KnetArray(Array(a)))\n",
-    "#km = kChain(kDense(c2k(m0.layers[1].W.data),c2k(m0.layers[1].b.data),Knet.relu), \n",
-    "#            kDense(c2k(m0.layers[2].W.data),c2k(m0.layers[2].b.data),identity))"
+    "## Knet GPU Profile"
    ]
   },
   {
@@ -342,6 +341,128 @@
     "display(AutoGrad.to)\n",
     "println(); flush(stdout)\n",
     "display(Knet.to)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CPU tests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(\"784×60000 Array{Float64,2}\", \"10×60000 Flux.OneHotMatrix{Array{Flux.OneHotVector,1}}\", \"784×60000 Array{Float64,2}\", \"60000-element Array{Int64,1}\")"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load data\n",
+    "epochs = 10\n",
+    "imgs = MNIST.images()\n",
+    "X = hcat(float.(reshape.(imgs, :))...) # Float64\n",
+    "labels = MNIST.labels()\n",
+    "Y = onehotbatch(labels, 0:9)\n",
+    "dataset = repeated((X, Y), epochs)\n",
+    "\n",
+    "kX = X\n",
+    "kY = labels .+ 1\n",
+    "kdata = repeated((kX,kY), epochs)\n",
+    "\n",
+    "summary.((X,Y,kX,kY))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(loss(X, Y), accuracy(X, Y)) = (2.3871476663323263 (tracked), 0.08006666666666666)\n",
+      "  8.411364 seconds (6.07 k allocations: 4.812 GiB, 30.91% gc time)\n",
+      "(loss(X, Y), accuracy(X, Y)) = (1.8506316291000398 (tracked), 0.5061166666666667)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run this several times to get CPU timing for Flux:\n",
+    "# (loss(X, Y), accuracy(X, Y)) = (2.3871476663323263 (tracked), 0.08006666666666666)\n",
+    "#  8.411364 seconds (6.07 k allocations: 4.812 GiB, 30.91% gc time)\n",
+    "# (loss(X, Y), accuracy(X, Y)) = (1.8506316291000398 (tracked), 0.5061166666666667)\n",
+    "m = Chain(Dense(28^2, 32, relu),Dense(32, 10),softmax) # gpu default is Float32 but cpu default is Float64!!!\n",
+    "m0 = deepcopy(m)\n",
+    "opt = ADAM(params(m))\n",
+    "loss(x, y) = crossentropy(m(x), y)\n",
+    "accuracy(x, y) = mean(onecold(m(x)) .== onecold(y))\n",
+    "@show loss(X, Y), accuracy(X, Y)\n",
+    "@time Flux.train!(loss, dataset, opt)\n",
+    "@show loss(X, Y), accuracy(X, Y);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Knet.nll(km, kX, kY), Knet.accuracy(km, kX, kY)) = (2.3871476663323263, 0.08006666666666666)\n",
+      "  3.668864 seconds (67.47 k allocations: 1.321 GiB, 53.07% gc time)\n",
+      "(Knet.nll(km, kX, kY), Knet.accuracy(km, kX, kY)) = (1.8487510324791598, 0.5076166666666667)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Run this several times to get CPU timing for Knet:\n",
+    "# (Knet.nll(km, kX, kY), Knet.accuracy(km, kX, kY)) = (2.3871476663323263, 0.08006666666666666)\n",
+    "#   3.668864 seconds (67.47 k allocations: 1.321 GiB, 53.07% gc time)\n",
+    "# (Knet.nll(km, kX, kY), Knet.accuracy(km, kX, kY)) = (1.8487510324791598, 0.5076166666666667)\n",
+    "f2k(a)=Param(Array(a))\n",
+    "km = kChain(kDense(f2k(m0.layers[1].W.data),f2k(m0.layers[1].b.data),Knet.relu), \n",
+    "            kDense(f2k(m0.layers[2].W.data),f2k(m0.layers[2].b.data),identity))\n",
+    "iters(n)=(J->((n-=1)>=0))\n",
+    "@show Knet.nll(km,kX,kY), Knet.accuracy(km,kX,kY)\n",
+    "@time Knet.train!(km,kdata,callback=iters(epochs),optimizer=Knet.Adam())\n",
+    "@show Knet.nll(km,kX,kY), Knet.accuracy(km,kX,kY);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#5 (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# You can use this to start Knet with exact same model on gpu\n",
+    "# m0 = deepcopy(m)\n",
+    "# c2k(a)=Param(KnetArray(Array(a)))\n",
+    "# km = kChain(kDense(c2k(m0.layers[1].W.data),c2k(m0.layers[1].b.data),Knet.relu), \n",
+    "#             kDense(c2k(m0.layers[2].W.data),c2k(m0.layers[2].b.data),identity))"
    ]
   },
   {
